2005-08-06  Andras Varga

	* opp_makemake.in, opp_nmakemake: added -P option (just gets passed 
	to opp_msgc)

2005-07-19  Andras Varga

	* opp_neddoc.in: changed runprog so that it gives system() a single
	string. This is necessary because we need to use the shell because
	of redirections. As documented at http://perldoc.perl.org/functions/
	system.html, perl uses the shell to execute a program if there is 
	only one scalar parameter and this must contain a shell metacharacter.
	[reported by Johann Glaser]

	* opp_neddoc.in: changed network images (GNED diagrams) from JPG
	to PNG. (It was JPG because a browser beginning with "I" used to have
	versions around with poor to none PNG support, and GhostScript 
	of course didn't create GIFs.) [change suggested by Johann Glaser]

2005-05-20  Andras Varga

	* opp_nmakemake: added printing of "entering <directory>", "leaving
	<directory>" messages

2005-03-31  ------ omnetpp-3.1 released ------

2005-03-03  Andras Varga

	* opp_makemake, opp_nmakemake: implemented -X (ignore subdirectory) option

2004-12-29  ------ omnetpp-3.0 released ------

2004-12-10  Andras Varga

	* opp_test: always used dynamic NED loading, regardless of -N option

2004-11-29  Andras Varga

  	* opp_makemake.in: avoid generating $(wildcard ..) without args.
  	Change needed for Mac OS/X [patch from Michael Tuexen]

	* opp_test: similar change as to opp_neddoc.in below, on 2004-11-21

2004-11-23  ------ omnetpp-3.0b1 released ------

2004-11-21  Andras Varga

  	* opp_neddoc.in: fixed the way it invokes commmands via system()
  	(We to break up the command line, otherwise redirection sometimes 
  	breaks on Windows; plus we always need to use COMSPEC)

2004-11-03  ------ omnetpp-3.0a9 released ------

2004-11-03  Andras Varga

	* opp_test: fixed bug which caused %not-contains tests not to take 
	place.

2004-10-27  Andras Varga

	* seedtool.cc: edited banner to clarify it generates seeds for LCG32.

2004-10-15  Andras Varga
