@@ -1,5 +1,12 @@
 2005-08-06  Andras Varga
 
+	* opp_nmakemake: implemented -s, -t options to enable building a DLL
+
+	* opp_makemake.in: added -t option (a do-nothing option) for command-
+	line compatibility with opp_nmakemake
+
+2005-08-05  Andras Varga
+
 	* opp_makemake.in, opp_nmakemake: added -P option (just gets passed 
 	to opp_msgc)
 
